[build-system] requires = ["setuptools>=68", "wheel"] build-backend = "setuptools.build_meta"

[project] name = "emptygpt" version = "1.4.0" description = "A tiny offline generator for meaningless GPT-like paragraphs." readme = { content-type = "text/markdown", text = """

emptygpt

introducing: emptygpt, a generator for meaningless GPT-like text.

Install:

pip install emptygpt

Use:

emptygpt
emptygpt --seed 42
emptygpt --paragraphs 2

Python API:

from emptygpt import generate
print(generate(seed=42, paragraphs=2))

(not a real LLM, runs fully offline)

uses:

Lorem Ipsum replacement, unit tests

Research -- e.g., use to detect these snowclones in public text, psychological tests

Obfuscation -- make human-written text sound machine-written

 """ } requires-python = ">=3.9" license = { text = "MIT" } authors = [{ name = "Decentricity" }] keywords = ["generator", "text", "parody", "snowclone", "jargon", "lorem-ipsum", "offline"] classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Topic :: Text Processing", "Topic :: Utilities", ]

[project.urls] Homepage = "https://github.com/Decentricity/emptygpt" Repository = "https://github.com/Decentricity/emptygpt" Issues = "https://github.com/Decentricity/emptygpt/issues"

[project.scripts] emptygpt = "emptygpt.cli:main"

[tool.setuptools] package-dir = { "" = "src" }

[tool.setuptools.packages.find] where = ["src"]